# lightdm-client-dbus-test

./: CMakeLists.txt  LICENSE  dbus_client.cpp  dbus_client.h  lightdmobject.cpp  lightdmobject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  net.fascode.lightdm.greeter_dbus.xml
